--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="pt-br">
 <head>
     <base href="/">
     <meta charset="utf-8" />
@@ -8,7 +8,7 @@
 
     <title>Acesso Med</title>
 
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=5' name='viewport' />
     <meta name="viewport" content="width=device-width" />
 
     <!--     Fonts and icons     -->
