Refatorando codigo; Filtros dos clientes

--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,12 @@
 
     <title>Acesso Med</title>
 
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=5' name='viewport' />
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=5' name='viewport' />
     <meta name="viewport" content="width=device-width" />
 
     <!--     Fonts and icons     -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,300&display=swap' rel='stylesheet' type='text/css'>
     <link href="assets/css/pe-icon-7-stroke.css" rel="stylesheet" />
     <style media="screen">
 
